Added stylesheet and finalized layout (not really but hopefully)

--- a/base.html
+++ b/base.html
@@ -7,29 +7,55 @@
     <title>math189r</title>
     <meta name="description" content="Harvey Mudd Mathematics of Big Data I">
     
-    <link red="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
-    <div class="nav">
-        <a href="index.html">Home</a> |
-        <a href="hw.html">Homework</a> |
-        <a href="mats.html">Materials</a>
+    <div class="header">
+        <h2> <a href="index.html">math189r</a> </h2>
+        <h3>
+            <a href="info/">Info</a> |
+            <a href="hw/">Homework</a> |
+            <a href="materials/">Materials</a>
+        </h3>
     </div>
 
-    <div class="top">
+    <div class="body">
         <h3>Mathematics of Big Data I</h3>
-        <p>Math 189r - Special Topics</p>
-        <p>Professor Weiqing Gu</p>
-        <p>Harvey Mudd College</p>
-    </div>
+        <p>
+            Math 189r - Special Topics</br>
+            Professor Weiqing Gu</br>
+            Harvey Mudd College
+        </p>
 
-    <div class="main">
-        <h3>Header</h3>
+        <h3>Header 3</h3>
         <p>
             Text Here.
         </p>
+
+        <h4> Header 4 </h4>
+        <p>
+            More text.
+        </p>
+
+        <pre>$ ls -a
+$ echo "this is code"</pre>
+
+        <table border="1">
+            <tr>
+                <td><h4> Monday </h4></td>
+                <td> Thursday </td>
+            </tr>
+            <tr>
+                <td> September 5 
+                    <p> Readings? </p>
+                </td>
+                <td> September 8
+                    <p> Section </p>
+                </td>
+            </tr>
+        </table>
     </div>
 
 </body>
