--- a/index.html
+++ b/index.html
@@ -7,10 +7,43 @@
     <title>math189r</title>
     <meta name="description" content="Harvey Mudd Mathematics of Big Data I">
     
-    <link red="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+
+    <div class="header">
+        <h2> <a href="index.html">math189r</a> </h2>
+        <h3>
+            <a href="info/">Info</a> |
+            <a href="hw/">Homework</a> |
+            <a href="materials/">Materials</a>
+        </h3>
+    </div>
+
+    <div class="body">
+        <h3>Mathematics of Big Data I</h3>
+        <p>
+            Professor Weiqing Gu</br>
+            Harvey Mudd College</br>
+            Fall 2016
+        </p>
+
+        <table border="1">
+            <tr>
+                <td><h4> Monday </h4></td>
+                <td> Thursday </td>
+            </tr>
+            <tr>
+                <td> September 5 
+                    <p> Readings? </p>
+                </td>
+                <td> September 8
+                    <p> Section </p>
+                </td>
+            </tr>
+        </table>
+    </div>
 
 </body>
 </html>
