Updated readings in course schedule

--- a/index.html
+++ b/index.html
@@ -29,40 +29,48 @@
             Fall 2016
         </p>
 
+        <p class="left-align">
+            <b>Readings</b> should be done <i>before</i> class. Reading summaries (specification in info section) are due for all non-Murphy readings at the start of class.
+        </p>
+
 <table>
     <thead>
         <tr>
-            <th>Supervised</br>Learning</th>
+            <th></th>
             <th>Monday</th>
             <th>Thursday</th>
         </tr>
     </thead>
     <tbody>
+
+        <!-- Supervised Learning -->
         <tr>
-            <td><a href="">Sept. 5</a></td>
+            <td><b>Supervised Learning</b></br><a href="">Sept. 5</a></td>
             <td>
                 Introduction. Linear Regression. Normal
                 Equations and Optimization Techniques.
                 Robust Linear Regression. Ridge Regression.
                 Big Data as a Regularizer. </br>
 
+                <b>Read:</b> Murphy 1.{all} (DEFINITELY READ BEFORE FIRST CLASS)</br>
                 <b>Read:</b> Murphy, 7.{1,...,5}
             </td>
             <td>
-                <a href="materials/sec_linear.pdf">Linear Algebra Review.</a>
+                <a href="materials/sec_linear.pdf">Linear Algebra Review</a>
             </td>
         </tr>
         <tr>
             <td><a href="">Sept. 12</a></td>
             <td>
-                Classification. Logistic Regression. Exponential
+                Classification. K-Nearest Neighbors. 
+                Logistic Regression. Exponential
                 Family and Generalized Linear Models. Logistic
                 Regression as a GLM.</br>
 
                 <b>Read:</b> Murphy, 8.{1,2,3,5} \ 8.{3.4,3.5}, 9.{1,2.2,2.4,3}
             </td>
             <td>
-                <a href="materials/sec_probability.pdf">Probability Review.</a></br>
+                <a href="materials/sec_probability.pdf">Probability Review</a></br>
             </td>
         </tr>
         <tr>
@@ -71,7 +79,7 @@
                 Generalized Linear Models continued.
                 Poisson Regression. Softmax Regression.</br>
 
-                <b>Read:</b> Murphy {}</br>
+                <b>Read:</b> Murphy 9.7 (short)</br>
                 <b>Due:</b> <a href="homework/sept_19.pdf">Homework 1</a>
             </td>
             <td>
@@ -95,14 +103,16 @@
             <td>
                 Support Vector Machines. Kernels.</br>
 
-                <b>Read:</b> Murphy {}</br>
+                <b>Read:</b> Murphy 14.{1,2,3,4} \ 14.{4.4}</br>
                 <b>Read:</b> <a href="http://static.googleusercontent.com/media/research.google.com/en//archive/mapreduce-osdi04.pdf">MapReduce: Simplified Data Processing on Large Clusters</a> (DEFINITELY READ THIS!)</br>
                 <b>Due:</b> <a href="homework/oct_3.pdf">Homework 2</a>
             </td>
             <td>
-                <a href="materials/sec_mapreduce.pdf">MapReduce and</br>Distributed Computatio</br> and Learning</a>
+                <a href="materials/sec_mapreduce.pdf">MapReduce and</br>Distributed Computation</br> and Learning</a>
             </td>
         </tr>
+
+        <!-- Unsupervised Learning -->
         <tr>
             <td><b> Unsupervised Learning </b></br><a href="">Oct.  10</a></td>
             <td>
@@ -110,10 +120,11 @@
                 Clustering. K-Means. Mixture of Gaussians.
                 Expectation-Maximization (EM) Algorithm.</br>
 
+                <b>Read:</b> Murphy 11.{1,2,3,4} \ 11.{4.6,4.9}</br>
                 <b>Read:</b> <a href="http://www.ee.oulu.fi/research/imag/courses/Vedaldi/ShalevSiSr07.pdf">Pegasos: Primal Estimated sub-GrAdient SOlver for SVM</a>
             </td>
             <td>
-                <a href="materials/sec_spam.pdf">Applications: Spam Detection</br>and Sentiment Analysis</a>
+                <a href="materials/sec_hmm.pdf">Applications of EM: Hidden Markov Models</a>
             </td>
         </tr>
         <tr>
@@ -128,11 +139,12 @@
                 Kernel PCA. One Class Support Vector
                 Machines. </br>
 
+                <b>Read:</b> Murphy 12.2.{0,1,2,3} 14.4.4</br>
                 <b>Read:</b> <a href="http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.675.575&rep=rep1&type=pdf"> Support Vector Method for Novelty Detection</a></br>
                 <b>Due:</b> Midterm. Final Project Progress Report.
             </td>
             <td>
-                <a href="materials/">SVM Training: Distributed</br>and Locally</a>
+                <a href="materials/sec_sparse_svm.pdf">Sparsity; SVM Training</a>
             </td>
         </tr>
         <tr>
@@ -142,13 +154,16 @@
                 Trade-off. Union and Chernoff/Hoeffding
                 Bounds.
 
-                <b>Read:</b> <a href="http://202.120.81.220:81/inter/uploads/readings/Detecting%20Adversarial%20Advertisements%20in%20the%20Wild.pdf">Detecting Adversarial Advertisements in the Wild</a></br>
+                <b>Read:</b> <a href="http://papers.nips.cc/paper/4337-large-scale-sparse-principal-component-analysis-with-application-to-text-data.pdf">Large-Scale Sparse Principal Component Analysis with Application to Text Data</a></br>
+                <b>Read:</b> <a href="http://projecteuclid.org/download/pdf_1/euclid.aos/1176346060">On the Convergence Properties of the EM Algorithm</a></br>
                 <b>Due:</b> <a href="homework/nov_7.pdf">Homework 3</a>
             </td>
             <td>
-                <a href="materials/sec_hmm.pdf">Hidden Markov Models</a>
+                <a href="materials/sec_deployment.pdf">Evaluating Models; Deployment</a>
             </td>
         </tr>
+
+        <!-- Recommender Systems -->
         <tr>
             <td><b> Recommender Systems </b></br><a href="">Nov.  7</a></td>
             <td>
@@ -158,9 +173,11 @@
                 <b>Read:</b> <a href="http://sifter.org/~simon/journal/20061211.html">Netflix Update: Try This at Home</a></br>
             </td>
             <td>
-                <a href="materials/sec_music.pdf">Application: Music Reccomendation</a>
+                <a href="materials/sec_music.pdf">Application: Music Recommendation</a>
             </td>
         </tr>
+
+        <!-- Bayesian Learning -->
         <tr>
             <td><b>Bayesian Learning</b></br><a href="">Nov.  14</a></td>
             <td>
@@ -185,22 +202,38 @@
         <tr>
             <td><a href="">Nov.  28</a></td>
             <td>
-                Monte-Carlo Methods. Importance Sampling.
-                Markov-Chain Monte-Carlo.</br>
+                Monte-Carlo Methods. Rejection Sampling.
+                Importance Sampling. Intro to Markov-Chain
+                Monte-Carlo.</br>
 
+                <b>Read:</b> Murphy 23.{1,2,3,4} \ 23.4.3</br>
                 <b>Read:</b> <a href="http://jmlr.org/proceedings/papers/v28/wilson13.pdf">Gaussian Process Kernels for Pattern Discovery and Extrapolation</a></br>
-                <b>Due:</b> <a href="homework/nov_14.pdf">Homework 4</a>
+                <b>Due:</b> <a href="homework/nov_28.pdf">Homework 5</a>
             </td>
             </td>
-            <td></td>
+            <td>
+                <a href="materials/sec_gp.pdf">Application: Identifying Rapidly Deteriorating Water Quality Locations With Gaussian Processes</a></br></br>
+
+                Some (~10) Final Project Presentations will be given
+                one day this week.
+            </td>
         </tr>
         <tr>
             <td><a href="">Dec.  5</a></td>
             <td>
                 Gibbs Sampling. The Metropolis-Hastings
                 Algorithm. Latent Dirichlet Allocation.</br>
+
+                <b>Read:</b> Murphy 24.{1,2.(1,2,3,4), 3,4} \ 24.{3.7}</br>
+                <b>Optional Read:</b> Murphy 24.{5,6}
+                <b>Due:</b> Final Project!
             </td>
-            <td></td>
+            <td>
+                Final Project Presentations. We will distribute
+                these across 2 days, where on the final day we will watch
+                presentations of
+                class and instructor chosen extraordinary projects.
+            </td>
         </tr>
         <tr>
             <td>Dec.  12</td>
