added info page

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                 Poisson Regression. Softmax Regression.</br>
 
                 <b>Read:</b> Murphy 9.7 (short)</br>
-                <b>Due:</b> <a href="homework/sept_19.pdf">Homework 1</a>
+                <b>Due:</b> <a href="homework/sept_19.pdf">Homework 1</a></br>
+                <b>Due:</b> Final Project Proposal
             </td>
             <td>
                 <a href="materials/sec_convex.pdf">Convex Optimization</br>Overview I</a>
@@ -141,7 +142,8 @@
 
                 <b>Read:</b> Murphy 12.2.{0,1,2,3} 14.4.4</br>
                 <b>Read:</b> <a href="http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.675.575&rep=rep1&type=pdf"> Support Vector Method for Novelty Detection</a></br>
-                <b>Due:</b> Midterm. Final Project Progress Report.
+                <b>Due:</b> Midterm.</br>
+                <b>Due:</b> Final Project Progress Report.
             </td>
             <td>
                 <a href="materials/sec_sparse_svm.pdf">Sparsity; SVM Training</a>
