added to info page

--- a/info/index.html
+++ b/info/index.html
@@ -198,7 +198,11 @@
             turn in a paper saying you worked on a convergence bound
             for months with no results. Type (2) has medium risk because
             part of the process of creating a new algorithm is creating
-            baselines to improve upon.
+            baselines to improve upon.</br></br>
+
+            At <i>any</i> time during the course <i>please</i> feel free
+            to come and discuss your problem and ask questions with the
+            instructor or TAs.
         </p>
         <h4> Requirements </h4>
         <ul>
