modify file structure to be cleaner

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <b>Read:</b> Murphy, 7.{1,...,5}
             </td>
             <td>
-                <a href="materials/sec_linear.pdf">Linear Algebra Review</a>
+                <a href="materials/section/linear.pdf">Linear Algebra Review</a>
             </td>
         </tr>
         <tr>
@@ -70,7 +70,7 @@
                 <b>Read:</b> Murphy, 8.{1,2,3,5} \ 8.{3.4,3.5}, 9.{1,2.2,2.4,3}
             </td>
             <td>
-                <a href="materials/sec_probability.pdf">Probability Review</a></br>
+                <a href="materials/section/probability.pdf">Probability Review</a></br>
             </td>
         </tr>
         <tr>
@@ -84,7 +84,7 @@
                 <b>Due:</b> Final Project Proposal
             </td>
             <td>
-                <a href="materials/sec_convex.pdf">Convex Optimization</br>Overview I</a>
+                <a href="materials/section/convex.pdf">Convex Optimization</br>Overview I</a>
             </td>
         </tr>
         <tr>
@@ -96,7 +96,7 @@
                 <b>Read:</b> Murphy 4.{1,2,3,4} \ 4.{3.3}</br>
             </td>
             <td>
-                <a href="materials/sec_convex.pdf">Convex Optimization</br>Overview II</a>
+                <a href="materials/section/convex.pdf">Convex Optimization</br>Overview II</a>
             </td>
         </tr>
         <tr>
@@ -109,7 +109,7 @@
                 <b>Due:</b> <a href="homework/oct_3.pdf">Homework 2</a>
             </td>
             <td>
-                <a href="materials/sec_mapreduce.pdf">MapReduce and</br>Distributed Computation</br> and Learning</a>
+                <a href="materials/section/mapreduce.pdf">MapReduce and</br>Distributed Computation</br> and Learning</a>
             </td>
         </tr>
 
@@ -125,7 +125,7 @@
                 <b>Read:</b> <a href="http://www.ee.oulu.fi/research/imag/courses/Vedaldi/ShalevSiSr07.pdf">Pegasos: Primal Estimated sub-GrAdient SOlver for SVM</a>
             </td>
             <td>
-                <a href="materials/sec_hmm.pdf">Applications of EM: Hidden Markov Models</a>
+                <a href="materials/section/hmm.pdf">Applications of EM: Hidden Markov Models</a>
             </td>
         </tr>
         <tr>
@@ -146,7 +146,7 @@
                 <b>Due:</b> Final Project Progress Report.
             </td>
             <td>
-                <a href="materials/sec_sparse_svm.pdf">Sparsity; SVM Training</a>
+                <a href="materials/section/sparse_svm.pdf">Sparsity; SVM Training</a>
             </td>
         </tr>
         <tr>
@@ -161,7 +161,7 @@
                 <b>Due:</b> <a href="homework/nov_7.pdf">Homework 3</a>
             </td>
             <td>
-                <a href="materials/sec_deployment.pdf">Evaluating Models; Deployment</a>
+                <a href="materials/section/deployment.pdf">Evaluating Models; Deployment</a>
             </td>
         </tr>
 
@@ -175,7 +175,7 @@
                 <b>Read:</b> <a href="http://sifter.org/~simon/journal/20061211.html">Netflix Update: Try This at Home</a></br>
             </td>
             <td>
-                <a href="materials/sec_music.pdf">Application: Music Recommendation</a>
+                <a href="materials/section/music.pdf">Application: Music Recommendation</a>
             </td>
         </tr>
 
@@ -214,7 +214,7 @@
             </td>
             </td>
             <td>
-                <a href="materials/sec_gp.pdf">Application: Identifying Rapidly Deteriorating Water Quality Locations With Gaussian Processes</a></br></br>
+                <a href="materials/section/gp.pdf">Application: Identifying Rapidly Deteriorating Water Quality Locations With Gaussian Processes</a></br></br>
 
                 Some (~10) Final Project Presentations will be given
                 one day this week.
