Update course schedule

--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
         <tr>
             <td><b>Supervised Learning</b></br><a href="">Sept. 5</a></td>
             <td>
-                Introduction. Linear Regression. Normal
+                Introduction to Big Data. Linear Regression. Normal
                 Equations and Optimization Techniques.
                 Robust Linear Regression. Ridge Regression.
-                Big Data as a Regularizer. </br>
+                Big Data as a Regularizer. </br></br>
 
                 <b>Read:</b> Murphy 1.{all} (DEFINITELY READ BEFORE FIRST CLASS)</br>
                 <b>Read:</b> Murphy, 7.{1,...,5}
             </td>
             <td>
-                <a href="materials/section/linear.pdf">Linear Algebra Review</a>
+                <a href="materials/section/linear.pdf">Linear Algebra and Matrix Calculus Review</a>
             </td>
         </tr>
         <tr>
@@ -65,7 +65,7 @@
                 Classification. K-Nearest Neighbors. 
                 Logistic Regression. Exponential
                 Family and Generalized Linear Models. Logistic
-                Regression as a GLM.</br>
+                Regression as a GLM.</br></br>
 
                 <b>Read:</b> Murphy, 8.{1,2,3,5} \ 8.{3.4,3.5}, 9.{1,2.2,2.4,3}
             </td>
@@ -77,11 +77,10 @@
             <td><a href="">Sept. 19</a></td>
             <td>
                 Generalized Linear Models continued.
-                Poisson Regression. Softmax Regression.</br>
+                Poisson Regression. Softmax Regression.</br></br>
 
                 <b>Read:</b> Murphy 9.7 (short)</br>
                 <b>Due:</b> <a href="homework/sept_19.pdf">Homework 1</a></br>
-                <b>Due:</b> Final Project Proposal
             </td>
             <td>
                 <a href="materials/section/convex.pdf">Convex Optimization</br>Overview I</a>
@@ -91,9 +90,10 @@
             <td><a href="">Sept. 26</a></td>
             <td>
                 Generative Learning Algorithms.
-                Gaussian Discriminant Analysis. Naive Bayes.</br>
+                Gaussian Discriminant Analysis. Naive Bayes.</br></br>
 
-                <b>Read:</b> Murphy 4.{1,2,3,4} \ 4.{3.3}</br>
+                <b>Read:</b> Murphy 4.{1,2,3,4} \ 4.{3.3}</br></br>
+                <b>Due:</b> Final Project Proposal
             </td>
             <td>
                 <a href="materials/section/convex.pdf">Convex Optimization</br>Overview II</a>
@@ -102,7 +102,7 @@
         <tr>
             <td><a href="">Oct.  3</a></td>
             <td>
-                Support Vector Machines. Kernels.</br>
+                Support Vector Machines. Kernels.</br></br>
 
                 <b>Read:</b> Murphy 14.{1,2,3,4} \ 14.{4.4}</br>
                 <b>Read:</b> <a href="http://static.googleusercontent.com/media/research.google.com/en//archive/mapreduce-osdi04.pdf">MapReduce: Simplified Data Processing on Large Clusters</a> (DEFINITELY READ THIS!)</br>
@@ -119,7 +119,7 @@
             <td>
                 Introduction to Unsupervised Learning.
                 Clustering. K-Means. Mixture of Gaussians.
-                Expectation-Maximization (EM) Algorithm.</br>
+                Expectation-Maximization (EM) Algorithm.</br></br>
 
                 <b>Read:</b> Murphy 11.{1,2,3,4} \ 11.{4.6,4.9}</br>
                 <b>Read:</b> <a href="http://www.ee.oulu.fi/research/imag/courses/Vedaldi/ShalevSiSr07.pdf">Pegasos: Primal Estimated sub-GrAdient SOlver for SVM</a>
@@ -138,7 +138,7 @@
             <td>
                 Principal Component Analysis (PCA).
                 Kernel PCA. One Class Support Vector
-                Machines. </br>
+                Machines. </br></br>
 
                 <b>Read:</b> Murphy 12.2.{0,1,2,3} 14.4.4</br>
                 <b>Read:</b> <a href="http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.675.575&rep=rep1&type=pdf"> Support Vector Method for Novelty Detection</a></br>
@@ -150,11 +150,11 @@
             </td>
         </tr>
         <tr>
-            <td><a href="">Oct.  31</a></td>
+            <td><b> Learning Theory </b></br><a href="">Oct.  31</a></td>
             <td>
                 Learning Theory. VC Dimension. Bias/Variance
                 Trade-off. Union and Chernoff/Hoeffding
-                Bounds.
+                Bounds.</br></br>
 
                 <b>Read:</b> <a href="http://papers.nips.cc/paper/4337-large-scale-sparse-principal-component-analysis-with-application-to-text-data.pdf">Large-Scale Sparse Principal Component Analysis with Application to Text Data</a></br>
                 <b>Read:</b> <a href="http://projecteuclid.org/download/pdf_1/euclid.aos/1176346060">On the Convergence Properties of the EM Algorithm</a></br>
@@ -170,7 +170,9 @@
             <td><b> Recommender Systems </b></br><a href="">Nov.  7</a></td>
             <td>
                 Introduction to Recommender Systems. Collaborative
-                Filtering. Non-Negative Matrix Factorization.</br>
+                Filtering. Non-Negative Matrix Factorization.
+                Using Non-Negative Matrix Factorization for Topic
+                Modelling.</br></br>
 
                 <b>Read:</b> <a href="http://sifter.org/~simon/journal/20061211.html">Netflix Update: Try This at Home</a></br>
             </td>
@@ -185,7 +187,7 @@
             <td>
                 Introduction to Bayesian Reasoning.
                 Bayesian Linear Regression. Bayesian
-                Logistic Regression.</br>
+                Logistic Regression.</br></br>
 
                 <b>Read:</b> Murphy 5.{1,2,3.0,3.2} 7.6, 8.4</br>
                 <b>Due:</b> <a href="homework/nov_14.pdf">Homework 4</a>
@@ -195,7 +197,7 @@
         <tr>
             <td><a href="">Nov.  21</a></td>
             <td>
-                Nonparametric Models. Gaussian Processes. </br>
+                Nonparametric Models. Gaussian Processes. </br></br>
             
                 <b>Read:</b> Murphy 15.{1,2}</br>
             </td>
@@ -206,7 +208,7 @@
             <td>
                 Monte-Carlo Methods. Rejection Sampling.
                 Importance Sampling. Intro to Markov-Chain
-                Monte-Carlo.</br>
+                Monte-Carlo.</br></br>
 
                 <b>Read:</b> Murphy 23.{1,2,3,4} \ 23.4.3</br>
                 <b>Read:</b> <a href="http://jmlr.org/proceedings/papers/v28/wilson13.pdf">Gaussian Process Kernels for Pattern Discovery and Extrapolation</a></br>
@@ -224,7 +226,7 @@
             <td><a href="">Dec.  5</a></td>
             <td>
                 Gibbs Sampling. The Metropolis-Hastings
-                Algorithm. Latent Dirichlet Allocation.</br>
+                Algorithm. Latent Dirichlet Allocation.</br></br>
 
                 <b>Read:</b> Murphy 24.{1,2.(1,2,3,4), 3,4} \ 24.{3.7}</br>
                 <b>Optional Read:</b> Murphy 24.{5,6}
