--- a/info/index.html
+++ b/info/index.html
@@ -218,7 +218,7 @@
             </li>
             <li>
                 Your submission must be submitted as a pdf in 
-                <a href="nips.cc">NIPS</a> <a href="https://nips.cc/Conferences/2016/PaperInformation/AuthorSubmissionInstructions">format</a>. Note
+                <a href="https://nips.cc">NIPS</a> <a href="https://nips.cc/Conferences/2016/PaperInformation/AuthorSubmissionInstructions">format</a>. Note
                 that this means you must use LaTeX with their
                 <a href="https://nips.cc/Conferences/2016/PaperInformation/StyleFiles">style file</a>. 
                 (NIPS, Neural Information Processing Systems,
@@ -233,7 +233,7 @@
                 URL somewhere in your final pdf. This is not required but
                 it is recommended to place your code under
                 <a href="http://choosealicense.com/">some open-source license</a>
-                such as <a href="http://choosealicense.com/licenses/mit/">MIT</a>.
+                such as <a ref="http://choosealicense.com/licenses/mit/">MIT</a>.
             </li>
         </ul>
         <h4> Due Dates </h4>
@@ -242,7 +242,7 @@
         </p>
         <ul>
             <li>
-                <b>Sept. 19</b> - Final Project Proposal. Typed (LaTeX)
+                <b>Sept. 26</b> - Final Project Proposal. Typed (LaTeX)
                 one (1) page maximum explaining your problem, what data
                 sets you are likely to use (you must find some candidates),
                 who your partners are, and what methods (of those you know of)
@@ -250,8 +250,8 @@
                 but it should be within some epsilon of your final project.
             </li>
             <li> 
-                <b>Oct. 24</b> - Midterm Progress Report. Typed (LaTeX)
-                two (3) page maximum detailing your (significant) progress
+                <b>Oct. 24</b> - Midterm Progress Report. Typed (LaTeX);
+                three (3) page maximum detailing your (significant) progress
                 towards your goal, which algorithms you have used, any
                 necessary insight (mathematical or otherwise) you have
                 conjured, etc. If you have not made significant progress
