fix homework date

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
                 <b>Read:</b> <a href="http://papers.nips.cc/paper/4337-large-scale-sparse-principal-component-analysis-with-application-to-text-data.pdf">Large-Scale Sparse Principal Component Analysis with Application to Text Data</a></br>
                 <b>Read:</b> <a href="http://projecteuclid.org/download/pdf_1/euclid.aos/1176346060">On the Convergence Properties of the EM Algorithm</a></br>
-                <b>Due:</b> <a href="homework/nov_7.pdf">Homework 3</a>
+                <b>Due:</b> <a href="homework/oct_31.pdf">Homework 3</a>
             </td>
             <td>
                 <a href="materials/section/deployment.pdf">Evaluating Models; Deployment</a>
