Update index and macros.tex

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                 <b>Read:</b> Murphy, 8.{1,2,3,5} \ 8.{3.4,3.5}, 9.{1,2.2,2.4,3}
             </td>
             <td>
-                <a href="materials/section/probability.pdf">Probability Review</a></br>
+                <a href="http://cs229.stanford.edu/section/cs229-prob.pdf">Probability Review</a></br>
+                (also Murphy 2.{all} is a great resource)
             </td>
         </tr>
         <tr>
@@ -174,6 +175,7 @@
                 Using Non-Negative Matrix Factorization for Topic
                 Modelling.</br></br>
 
+                <b>Read:</b> Murphy 27.6.2</br>
                 <b>Read:</b> <a href="http://sifter.org/~simon/journal/20061211.html">Netflix Update: Try This at Home</a></br>
             </td>
             <td>
@@ -228,7 +230,7 @@
                 Gibbs Sampling. The Metropolis-Hastings
                 Algorithm. Latent Dirichlet Allocation.</br></br>
 
-                <b>Read:</b> Murphy 24.{1,2.(1,2,3,4), 3,4} \ 24.{3.7}</br>
+                <b>Read:</b> Murphy 24.{1,2.(1,2,3,4), 3,4} \ 24.{3.7}, 27.{1,2,3}</br>
                 <b>Optional Read:</b> Murphy 24.{5,6}
                 <b>Due:</b> Final Project!
             </td>
