Add diriclet processes to schedule

--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
         <tr>
             <td><a href="">Nov.  21</a></td>
             <td>
-                Nonparametric Models. Gaussian Processes. </br></br>
+                Nonparametric Models. Gaussian Processes. 
+                Dirichlet Processes</br></br>
             
                 <b>Read:</b> Murphy 15.{1,2}</br>
             </td>
