--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 Support Vector Machines. Kernels.</br></br>
 
                 <b>Read:</b> Murphy 14.{1,2,3,4} \ 14.{4.4}</br>
-                <b>Read:</b> <a href="http://static.googleusercontent.com/media/research.google.com/en//archive/mapreduce-osdi04.pdf">MapReduce: Simplified Data Processing on Large Clusters</a> (DEFINITELY READ THIS!)</br>
+                <b>Read:</b> <a href="http://static.googleusercontent.com/media/research.google.com/en//archive/mapreduce-osdi04.pdf">MapReduce: Simplified Data Processing on Large Clusters</a></br>
                 <b>Due:</b> <a href="homework/oct_3.pdf">Homework 2</a>
             </td>
             <td>
@@ -123,7 +123,8 @@
                 Expectation-Maximization (EM) Algorithm.</br></br>
 
                 <b>Read:</b> Murphy 11.{1,2,3,4} \ 11.{4.6,4.9}</br>
-                <b>Read:</b> <a href="http://www.ee.oulu.fi/research/imag/courses/Vedaldi/ShalevSiSr07.pdf">Pegasos: Primal Estimated sub-GrAdient SOlver for SVM</a>
+                <b>Read:</b> <a href="http://www.ee.oulu.fi/research/imag/courses/Vedaldi/ShalevSiSr07.pdf">Pegasos: Primal Estimated sub-GrAdient SOlver for SVM</a></br>
+                <b>Read:</b> <a href="https://people.eecs.berkeley.edu/~brecht/papers/07.rah.rec.nips.pdf">Random Features for Large-Scale Kernel Machines</a> (deep insight)
             </td>
             <td>
                 <a href="materials/section/hmm.pdf">Applications of EM: Hidden Markov Models</a>
@@ -187,9 +188,9 @@
         <tr>
             <td><b>Bayesian Learning</b></br><a href="">Nov.  14</a></td>
             <td>
-                Introduction to Bayesian Reasoning.
-                Bayesian Linear Regression. Bayesian
-                Logistic Regression.</br></br>
+                Formal Introduction to Bayesian Reasoning.
+                Bayesian Linear Regression (which we've already seen).
+                Bayesian Logistic Regression.</br></br>
 
                 <b>Read:</b> Murphy 5.{1,2,3.0,3.2} 7.6, 8.4</br>
                 <b>Due:</b> <a href="homework/nov_14.pdf">Homework 4</a>
@@ -199,22 +200,27 @@
         <tr>
             <td><a href="">Nov.  21</a></td>
             <td>
-                Nonparametric Models. Gaussian Processes. 
-                Dirichlet Processes</br></br>
-            
-                <b>Read:</b> Murphy 15.{1,2}</br>
+                Monte-Carlo Methods. Rejection Sampling.
+                Importance Sampling. Intro to Markov-Chain
+                Monte-Carlo.
+                Gibbs Sampling. The Metropolis-Hastings
+                Algorithm. </br></br>
+
+                <b>Read:</b> Murphy 23.{1,2,3,4} \ 23.4.3,
+                                    24.{1,2.(1,2,3,4), 3,4} \ 24.{3.7}</br>
+                <b>Optional Read:</b> Murphy 24.{5,6}
             </td>
             <td>Thanksgiving</td>
         </tr>
         <tr>
             <td><a href="">Nov.  28</a></td>
             <td>
-                Monte-Carlo Methods. Rejection Sampling.
-                Importance Sampling. Intro to Markov-Chain
-                Monte-Carlo.</br></br>
+                Latent Dirichlet Allocation. Sampling solutions
+                for Bayesian linear and logistic regression. Gaussian
+                Processes intro.
+                </br></br>
 
-                <b>Read:</b> Murphy 23.{1,2,3,4} \ 23.4.3</br>
-                <b>Read:</b> <a href="http://jmlr.org/proceedings/papers/v28/wilson13.pdf">Gaussian Process Kernels for Pattern Discovery and Extrapolation</a></br>
+                <b>Read:</b> Murphy 27.{1,2,3}, 15.{1,2}</br>
                 <b>Due:</b> <a href="homework/nov_28.pdf">Homework 5</a>
             </td>
             </td>
@@ -228,11 +234,11 @@
         <tr>
             <td><a href="">Dec.  5</a></td>
             <td>
-                Gibbs Sampling. The Metropolis-Hastings
-                Algorithm. Latent Dirichlet Allocation.</br></br>
-
-                <b>Read:</b> Murphy 24.{1,2.(1,2,3,4), 3,4} \ 24.{3.7}, 27.{1,2,3}</br>
-                <b>Optional Read:</b> Murphy 24.{5,6}
+                Nonparametric Models. Gaussian Processes continued. 
+                Dirichlet Processes and the infinite mixture of Gaussians.</br></br>
+            
+                <b>Read:</b> Murphy 15.{3,4}, 25.2</br>
+                <b>Read:</b> <a href="http://jmlr.org/proceedings/papers/v28/wilson13.pdf">Gaussian Process Kernels for Pattern Discovery and Extrapolation</a></br>
                 <b>Due:</b> Final Project!
             </td>
             <td>
